app/assets/stylesheets/layouts/_banner.scss
.l-banner {
  position: relative;

  @include respond-to($mq-m) {
    background-color: $banner-bg-color;
  }

  .l-constrained {
    padding-top: baseline-unit(2);
  }
}

.l-banner__image {
  width: 100%;
  display: block;

  + .l-constrained {
    padding-top: 0;

    @include respond-to($mq-m) {
      background: transparent;
      position: absolute;
      right: 0;
      bottom: baseline-unit(1);
    }
  }
}

.l-banner__tags {
  @include column(12);
  z-index: $z-foreground;
  position: relative;
  padding-top: baseline-unit(1);

  @include respond-to($mq-m) {
    text-align: right;
    right: 0;
  }

  @include respond-to($mq-two-col) {
    @include column(9);
    @include push(2);
  }
}

